ValGrind. Run 'valgrind --tool=memcheck --leak-check=yes ./test'

To do:
- make tifiles_calc_are_compat more powerful
- add tifiles_file_is_targetted(filename, model, class) avec class = ALL

Log:

- 12/07/2006, version 0.2.2: roms
	- variables like 'beta' can't be handled by TiGroup file nor ZIP archives.
	Translate filenames again!

- 06/07/2006, version 0.2.1: roms
	- bug #1499672: every edit-locked BASIC and AMS program is marked ASM
	and received as *.8xz, of course this has to be *.8xp for both locked 
	BASIC and ASM.
	- reverted back changes made on tifile encoding <-> raw varname encoding (v0.1.2)
		because	this code had no effect. Moreover, it will imply to pass target hand-held
		to convert varname in the right encoding. For now, this step is postponed on ticalcs2
		library.
	- reverted back again
	- replaced fopen by gfopen in ZIP I/O callbacks (locale/utf8)

14) variables like 'beta' can't be handled by TiGroup file nor ZIP archives. We may
	need translation...

- 17/06/2006, version 0.2.0: roms
	- full TiGroup support (both regular & flash with deflate compression)

- 05/06/2006, version 0.1.5: roms
	- renamed stdints.h into stdints2.h
	
- 16/05/2006, version 0.1.4: roms
	- fixed bug in tifiles_file_is_tib which didn't detect TIB files.

- 16/04/2006, version 0.1.3: roms
	- thanks to O. Armand, fixed a bug in the file attribute (archived flag)
	- ti8x_read_flash now returns in FlashContent.data_length the length of pure data
		instead of file size (TI8x FLASH file format)

- 07/04/2006, version 0.1.2: roms
	- increased buffer length of variable & folder names (9 -> 36) due to TI-UTF-8
	- checked for usb calcs support
	- fixed warnings

- 16/03/2006, version 0.1.1: roms
	- free the block itself in tifiles_content_delete_xxxxx
	- clean-up (removed dead code)

- 23/02/2006, version 0.1.0: roms
	- removed deprecated functions

- 21/02/2006, version 0.0.9: roms
	- moved transcode support as deprecated (superseded by ticonv libary)
	- switched to ticonv
