@@ -12,6 +12,7 @@ Log:
 - 12/07/2006, version 0.2.2: roms
 	- variables like 'beta' can't be handled by TiGroup file nor ZIP archives.
 	Translate filenames again!
+	- for now, use this naming scheme for TI9x var filenames: folder.var.extension
 
 - 06/07/2006, version 0.2.1: roms
 	- bug #1499672: every edit-locked BASIC and AMS program is marked ASM
